--- a/src/components/Home/SearchBar.css
+++ b/src/components/Home/SearchBar.css
@@ -17,7 +17,7 @@
 }
 
 #search {
-    background-image: url(../../assets/images/HomePage/Search.png);
+    background-image: url("../../assets/images/HomePage/Search.png");
     background-repeat: no-repeat;
     background-position: 12px center;
     background-size: 18px;
