--- a/src/components/Explore/ExploreHero.css
+++ b/src/components/Explore/ExploreHero.css
@@ -1,5 +1,5 @@
 .explore-hero{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.6)), url('../../assets/images/ExplorePage/ExploreHero.png');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.6)), url('/images/ExplorePage/ExploreHero.png');
     background-repeat: no-repeat;
     width: 100%;
     height: 500px;
@@ -21,7 +21,7 @@
 
 @media (max-width: 480px){
     .explore-hero{
-        background-image: linear-gradient(rgba(0, 0, 0, 0.6)), url('../../assets/images/HomePage/Hero.png');
+        background-image: linear-gradient(rgba(0, 0, 0, 0.6)), url('/images/HomePage/Hero.png');
         background-position: 50%;
         margin-bottom: 0;
     }
