--- a/src/components/Home/ChefSpecials.css
+++ b/src/components/Home/ChefSpecials.css
@@ -34,6 +34,10 @@
   font-size: 14px;
 }
 
+.special-item p{
+  color: #1F2937;
+}
+
 .special-item img {
   width: 100%;
   height: 200px;
@@ -48,7 +52,7 @@
 }
 
 .special-flex p {
-  color: #ff7a18;
+  color: #ff7a18 !important;
 }
 
 .special-flex a {
