--- a/src/components/Home/HomeHeroBottom.css
+++ b/src/components/Home/HomeHeroBottom.css
@@ -1,6 +1,6 @@
 .hero-2{
     margin-top: 100px;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.6)), url('../../assets/images/HomePage/Hero2.png');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.6)), url("/images/HomePage/Hero2.png");
     background-repeat: no-repeat;
     width: 100%;
     height: 500px;
