--- a/src/styles/FoodDetailsPage.css
+++ b/src/styles/FoodDetailsPage.css
@@ -38,11 +38,24 @@
   width: 100%;
 }
 
+.jollof-write-up{
+  font-size: 14px;
+}
+
 .flex-options div {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 10px;
+}
+
+.flex-options p{
+  font-size: 14px;
+  color: #4B5563;
+}
+
+.allergies{
+  color: #1E88E5 !important;
 }
 
 .protein-options {
@@ -73,6 +86,10 @@
   white-space: nowrap;
 }
 
+.protein p, .protein span{
+  font-size: 14px;
+}
+
 .extra-options {
   display: flex;
   flex-direction: column;
@@ -100,12 +117,17 @@
   white-space: nowrap;
 }
 
+.extra p, .extra span{
+  font-size: 14px;
+}
+
 .textarea {
   width: 100%;
   min-height: 100px;
   border: 1px solid #ccc;
   border-radius: 0.5em;
   padding: 10px;
+  font-size: 14px;
 }
 
 .mobile-img{
