--- a/src/styles/OrdersPage.css
+++ b/src/styles/OrdersPage.css
@@ -26,7 +26,7 @@
 }
 
 .order-details p {
-  color: #1F2937;
+  color: #1f2937;
 }
 
 .quantity-flex {
@@ -114,9 +114,9 @@
 
   .order img {
     width: 90px;
-    height: 90px;
-    object-fit: cover;
-    align-self: center;
+    height: auto;
+    align-self: stretch;  
+    object-fit: cover; 
   }
 
   .order-details {
