--- a/src/styles/SignInPage.css
+++ b/src/styles/SignInPage.css
@@ -7,7 +7,7 @@
 .sign-in-background-section {
   background-image:
     linear-gradient(#ff7a18b2, #ff7a18b2),
-    url("../assets/images/WelcomePage/Banner.png");
+    url("/images/WelcomePage/Banner.png");
   width: 100%;
   height: 800px;
   text-align: center;
@@ -69,7 +69,7 @@
 }
 
 #log-in-email {
-  background-image: url(../assets/images/SignInPage/Mail.png);
+  background-image: url("/images/SignInPage/Mail.png");
   background-repeat: no-repeat;
   background-position: 12px center;
   background-size: 15px;
@@ -77,7 +77,7 @@
 }
 
 #log-in-password {
-  background-image: url(../assets/images/SignInPage/Lock.png);
+  background-image: url("/images/SignInPage/Lock.png");
   background-repeat: no-repeat;
   background-position: 12px center;
   background-size: 15px;
